# autopilot

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.pre-ruflo  CONTRIBUTING.md  DATABASE_STORAGE_ROADMAP.md  Dockerfile  GEMINI.md  LIVE_STREAMING_PLAN.md  Makefile  PHASE1_COMPLETION_REPORT.md  PIPELINE_COMPLETION_README.md  QUICK_START_STORAGE_IMPROVEMENTS.md  RUNBOOK_OPS.md  Readme.md  TODOS.md  XGBOOST_PIVOT_2026_05_12.md  awesome-code.skill  aws_train_model.py  backtest.py  backtest_fast.py  backtest_with_capital.py  create_mock_data.py  delete.py  deploy.py  features.md  generate_signal.py  history.py  inference.py  label.py  launch_sagemaker_job.py  live_trader.py  live_vs_train_calibration.py  main.py  model.pt  model_last.pt  (+23 more)
.claude/: proven-config.json  settings.json
dashboard/: index.html  package-lock.json  package.json
dashboard-web/: .env.example  .gitignore  DEPLOY.md  README.md  next.config.mjs
data/: __init__.py
docs/: CRYPTO_1M_KILL.md  CRYPTO_HYPERLIQUID_RETARGET.md  MULTI_ASSET_LSTM_2026_06_08.md  PROFITABILITY_PIVOT.md  STOCKS_ALPACA_ADAPTER.md  STRATEGY_RESEARCH_2026_06_04.md  branch_audit_findings.md  decision_journal.md
launchd/: com.autopilot.dashboard-exporter.plist  com.autopilot.halal-bot.plist  com.autopilot.loss-postmortem.plist  com.autopilot.outcome-adjuster.plist
model/: X_scaler_final.joblib  model.pt  model_final.pt  model_last.pt  model_meta.json  scaler.joblib  training_summary.json
model_sanity/: best_live_config.json  hiwin_gate_fit.json  hiwin_regime_validation.json  model_meta.json  profit_report.json  training_summary.json
observability/: grafana_dashboard.json
output/: best_model.pth  model_config.json  scaler.pkl
scripts/: backtest_filtered.py  backtest_hyperliquid_retarget.py  backtest_resolved.py  btc_sol_voln_v2_train.py  cleanup_zombies.py  (+22 more)
(+484 files in other folders)
